--- a/5.1.R.html
+++ b/5.1.R.html
@@ -28,7 +28,7 @@
         <div class="ball">Баллы:<label id="lblScore"></label>
         </div>
         <div class="task">
-            <p>Баба-Яга варит приворотное зелье. Из колбы, в которой находится 10 столовых ложек волшебного нектара, необходимо необходимо налить в котелок с зельем 5 таких ложек одной порцией. У Бабы-Яги есть две плошки: в одну помещается 3 столовых ложки нектара, а во вторую - 4.<br><br>Какое минимальное количество переливаний сделает Баба-Яга, чтоб приготовить зелье?</p>
+            <p>Баба Яга варит приворотное зелье. Из колбы, в которой находится 10 столовых ложек волшебного нектара, необходимо налить в котелок с зельем 5 таких ложек одной порцией. У Бабы Яги есть две плошки: в одну помещается 3 столовых ложки нектара, а во вторую - 4.<br><br>Какое минимальное количество переливаний сделает Баба Яга, чтоб приготовить зелье?</p>
             
     </div>
     <form >
