--- a/1.4.G.html
+++ b/1.4.G.html
@@ -72,7 +72,7 @@
   <script>new WOW().init();</script>
   
   <script type="text/javascript">
-    const answ = '5';
+    const answ = 'В25';
     const nul = '';
     var Score = 0;
         $('#button').click(function(){
