--- a/1.4.P.html
+++ b/1.4.P.html
@@ -75,7 +75,7 @@
   
 
   <script type="text/javascript">
-    const answ = '5';
+    const answ = 'В25';
     const nul = '';
     var Score = 0;
         $('#button').click(function(){
