--- a/1.4.R.html
+++ b/1.4.R.html
@@ -30,7 +30,7 @@
         <div class="ball">Баллы:<label id="lblScore"></label>
         </div>
         <div class="task">
-            <p>Часы Васи отстают на 5 минут, но он считает, что часы спешат на 10 минуты. Часы Пети спешат на 2 минуты, однако он думает, что они отстают на 8 минут. Друзья договорились, что встретиться в 6 часов вечера. <br><br>Кто из мальчиков придёт позже и на сколько минут?</p>
+            <p>Часы Васи отстают на 5 минут, но он считает, что часы спешат на 10 минут. Часы Пети спешат на 2 минуты, однако он думает, что они отстают на 8 минут. Друзья договорились встретиться в 6 часов вечера. <br><br>Кто из мальчиков придёт позже и на сколько минут?</p>
     </div>
     <form action="" method="get">
         <input id="answer" placeholder="Ваш ответ"  type="answer"><br><br>
@@ -66,7 +66,7 @@
   
 
   <script type="text/javascript">
-    const answ = '21';
+    const answ = 'В25';
     const nul = '';
     var Score = 0;
    function GetIntRandom(min,max){
