--- a/3.4.R.html
+++ b/3.4.R.html
@@ -83,7 +83,7 @@
         $('#button').click(function(){
             if($('#answer').val()==answ){
                 Score = Score+5;
-                window.location.href = GetIntRandom(41,45)/10+'.R.html' + '#' + Score;
+                window.location.href = 'transportR3.html' + '#' + Score;
                 }
             
                 else if($('#answer').val()==nul){
@@ -99,7 +99,7 @@
                 }
             
                 else{
-                window.location.href = 'transportR3.html' + '#' + Score;
+                window.location.href = 'transportRd3.html' + '#' + Score;
                 }
                 });
 </script>
