--- a/3.5.P.html
+++ b/3.5.P.html
@@ -31,7 +31,7 @@
         <div class="ball">Баллы:<label id="lblScore"></label>
         </div>
         <div class="task">
-            <p>В угловых клетках квадрата 3 х 3 клеточки записаны числа 1, 8, 8, 6 так, как показано на рисунке.<br><br> Можно ли в пустые клетки вписать некоторые числа (в каждую клетку – одно число) так, чтобы сумма чисел во всех четырёх угловых квадратах 2 х 2 была одна и та же?<br>В ответ запиши слово "Да" или "Нет"</p>
+            <p>В угловых клетках квадрата 3 х 3 клеточки записаны числа 1, 8, 8, 6 так, как показано на рисунке.<br><br> Можно ли в пустые клетки вписать некоторые числа (в каждую клетку – одно число) так, чтобы сумма чисел во всех четырёх угловых квадратах 2 х 2 была одна и та же?<br>В ответ запишите слово "Да" или "Нет"</p>
             <img src="img/task1.png" width="160" height="160">
             
     </div>
