--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 Мы рады приветствовать тебя в нашей игре. Надеемся, она поможет тебе находить ответы на сложные, запутанные вопросы, решать математические задачи, используя твои знания. Научит тебя не сдаваться, рассуждать логически и применять математические формулы и законы для решения жизненных ситуаций.<br><br>
 
-Игра предлагает решить олимпиадные задачи по математике, что поможет тебе подготовиться к участию в интернет-олимпиадах, в очных турах республиканской олимпиады и различных конкурсах, связанных с учебным предметом «Математика».<br><br>
+Игра предлагает решить олимпиадные задачи по математике, что поможет тебе подготовится к участию в интернет-олимпиадах, в очных турах республиканской олимпиады и различных конкурсах, связанных с учебным предметом «Математика».<br><br>
 
 Надеемся, игра поможет тебе увидеть всю красоту сложной математики не только как науки, но и как всего, что тебя окружает!<br><br>
 
