--- a/1.4.P.html
+++ b/1.4.P.html
@@ -30,7 +30,7 @@
         <div class="ball">Баллы:<label id="lblScore"></label>
         </div>
         <div class="task">
-            <p>Часы Васи отстают на 5 минут, но он считает, что часы спешат на 10 минут. Часы Пети спешат на 2 минуты, однако он думает, что они отстают на 8 минут. Друзья договорились встретиться в 6 часов вечера. <br><br>Кто из мальчиков придёт позже и на сколько минут?<br><br>Ответ запишите в следующей форме: A17.<br>Где А-первая буква имени опоздавшего мальчик, 17 - время в минутах, на сколько опоздал мальчик.</p>
+            <p>Часы Васи отстают на 5 минут, но он считает, что часы спешат на 10 минуты. Часы Пети спешат на 2 минуты, однако он думает, что они отстают на 8 минут. Друзья договорились, что встретиться в 6 часов вечера. <br><br>Кто из мальчиков придёт позже и на сколько минут?<br><br>Ответ запишите в следующей форме: A17.<br>Где А-первая буква имени опоздавшего мальчик, 17 - время в минутах, на сколько опоздал мальчик.</p>
     </div>
     <div class="button">
     
