--- a/1.4.R.html
+++ b/1.4.R.html
@@ -30,7 +30,7 @@
         <div class="ball">Баллы:<label id="lblScore"></label>
         </div>
         <div class="task">
-            <p>Часы Васи отстают на 5 минут, но он считает, что часы спешат на 10 минут. Часы Пети спешат на 2 минуты, однако он думает, что они отстают на 8 минут. Друзья договорились встретиться в 6 часов вечера. <br><br>Кто из мальчиков придёт позже и на сколько минут?<br><br>Ответ запишите в следующей форме: A17.<br>Где А-первая буква имени опоздавшего мальчик, 17 - время в минутах, на сколько опоздал мальчик.</p>
+            <p>Часы Васи отстают на 5 минут, но он считает, что часы спешат на 10 минуты. Часы Пети спешат на 2 минуты, однако он думает, что они отстают на 8 минут. Друзья договорились, что встретиться в 6 часов вечера. <br><br>Кто из мальчиков придёт позже и на сколько минут?<br><br>Ответ запишите в следующей форме: A17.<br>Где А-первая буква имени опоздавшего мальчик, 17 - время в минутах, на сколько опоздал мальчик.</p>
     </div>
     <form action="" method="get">
         <input id="answer" placeholder="Ваш ответ"  type="answer"><br><br>
@@ -75,7 +75,7 @@
         $('#button').click(function(){
             if($('#answer').val()==answ){
                 Score = Score+5;
-                window.location.href = GetIntRandom(21,25)/10+'.R.html' + '#' + Score;
+                window.location.href = 'transportR1.html' + '#' + Score;
                 }
             
                 else if($('#answer').val()==nul){
@@ -91,7 +91,7 @@
                 }
             
                 else{
-                window.location.href = 'transportR1.html' + '#' + Score;
+                window.location.href = 'transportRd1.html' + '#' + Score;
                 }
                 var lblScore = Document.getElementbyId('lblScore');
                 lblScore.innerHTML=Score;
