--- a/2.2.R.html
+++ b/2.2.R.html
@@ -74,7 +74,7 @@
         $('#button').click(function(){
             if($('#answer').val()==answ){
                 Score = Score+5;
-                window.location.href = GetIntRandom(31,35)/10+'.R.html' + '#' + Score;
+                window.location.href = 'transportR2.html' + '#' + Score;
                 }
             
                 else if($('#answer').val()==nul){
@@ -90,7 +90,7 @@
                 }
             
                 else{
-                window.location.href = 'transportR2.html' + '#' + Score;
+                window.location.href = 'transportRd2.html' + '#' + Score;
                 }
                 });
 </script>
