--- a/2.4.R.html
+++ b/2.4.R.html
@@ -76,7 +76,7 @@
         $('#button').click(function(){
             if($('#answer').val()==answ){
                 Score = Score+5;
-                window.location.href = GetIntRandom(31,35)/10+'.R.html' + '#' + Score;
+                window.location.href = 'transportR2.html' + '#' + Score;
                 }
             
                 else if($('#answer').val()==nul){
@@ -92,7 +92,7 @@
                 }
             
                 else{
-                window.location.href = 'transportR2.html' + '#' + Score;
+                window.location.href = 'transportRd2.html' + '#' + Score;
                 }
                 });
 </script>
