--- a/3.2.R.html
+++ b/3.2.R.html
@@ -75,7 +75,7 @@
         $('#button').click(function(){
             if($('#answer').val()==answ){
                 Score = Score+5;
-                window.location.href = GetIntRandom(41,45)/10+'.R.html' + '#' + Score;
+                window.location.href = 'transportR3.html' + '#' + Score;
                 }
             
                 else if($('#answer').val()==nul){
@@ -91,7 +91,7 @@
                 }
             
                 else{
-                window.location.href = 'transportR3.html' + '#' + Score;
+                window.location.href = 'transportRd3.html' + '#' + Score;
                 }
                 });
 </script>
