--- a/4.3.R.html
+++ b/4.3.R.html
@@ -72,7 +72,7 @@
         $('#button').click(function(){
            if($('#answer').val()=='Ира'||$('#answer').val()=='ира'||$('#answer').val()=='ИРА'){
                 Score = Score+5;
-                window.location.href = GetIntRandom(51,55)/10+'.R.html' + '#' + Score;
+                window.location.href = 'transportR4.html' + '#' + Score;
                 }
             
                 else if($('#answer').val()==nul){
@@ -88,7 +88,7 @@
                 }
             
                 else{
-                window.location.href = 'transportR4.html' + '#' + Score;
+                window.location.href = 'transportRd4.html' + '#' + Score;
                 }
                 });
 </script>
