--- a/Choosen lvl.html
+++ b/Choosen lvl.html
@@ -33,7 +33,7 @@
               </div>
               
             <div class="row">
-               <h2>Выбери уровень сложности</h2>
+               <h2>Выберите уровень сложности</h2>
             </div>
             
             <div class="row lvlname">
