--- a/1.1.R.html
+++ b/1.1.R.html
@@ -33,7 +33,7 @@
             <p>Вдоль прямолинейной аллеи растут четыре дерева. Расстояния между соседними из них равны 56, 16, 96 метрам.<br><br> Какое наименьшее число деревьев надо ещё посадить, чтобы расстояния между любыми двумя соседними деревьями были равны между собой?</p>
     </div>
     <form action="" method="get">
-        <input id="answer" placeholder="Ваш ответ"  type="answer"><br><br>
+        <input id="answer" placeholder="Ваш ответ"  type="answer" autocomplete="off"><br><br>
         <input id="button"  type="button" value="Ответить">
     </form>        
     </div>
