--- a/1.2.R.html
+++ b/1.2.R.html
@@ -33,7 +33,7 @@
             <p>Три года назад Оля была в три раза моложе своего брата Степана, а четыре года назад в четыре раза моложе Степана. <br><br>Сколько лет Степану и Оле сейчас?<br>В ответ запишите произведение полученных значений.</p>
     </div>
     <form action="" method="get">
-        <input id="answer" placeholder="Ваш ответ"  type="answer"><br><br>
+        <input id="answer" placeholder="Ваш ответ"  type="answer" autocomplete="off"><br><br>
         <input id="button"  type="button" value="Ответить">
     </form>        
     </div>
