--- a/1.3.R.html
+++ b/1.3.R.html
@@ -33,7 +33,7 @@
             <p>В детском магазине есть много интересных игрушек. Среди них на одной полке лежат мишки, куклы, мячики и машинки. Известно, что машинка весит столько же, сколько весит мишка и кукла вместе, а три мячика – столько же, сколько две машинки. Кроме того, мишка весит столько же, сколько весит кукла и мячик вместе.<br><br>На правую чашу весов положили мишку. Сколько кукол нужно положить на левую чашу, чтобы весы находились в равновесии?</p>
     </div>
     <form action="" method="get">
-        <input id="answer" placeholder="Ваш ответ"  type="answer"><br><br>
+        <input id="answer" placeholder="Ваш ответ"  type="answer" autocomplete="off"><br><br>
         <input id="button"  type="button" value="Ответить">
     </form>        
     </div>
