--- a/2.3.R.html
+++ b/2.3.R.html
@@ -38,7 +38,7 @@
         <p>Во время проведения конкурса по рисованию среди детей 10 - 12 лет каждому участнику были выданы 1 альбомный лист, 1 простой карандаш и 1 набор красок (с кистью в наборе). Всего у организаторов было 60 альбомных листов, а количество простых карандашей было в два раза больше, чем наборов красок. После окончания конкурса выяснилось, что число красок, которые не раздали, в два раза меньше числа альбомных листов, которых не раздали, и в три раза меньше числа карандашей, которых не раздали. <br><br>	Сколько детей участвовало в конкурсе по рисованию?</p>
     </div>
     <form action="" method="get">
-        <input id="answer" placeholder="Ваш ответ"  type="answer"><br><br>
+        <input id="answer" placeholder="Ваш ответ"  type="answer" autocomplete="off"><br><br>
         <input id="button"  type="button" value="Ответить">
     </form>        
     </div>
