--- a/2.4.R.html
+++ b/2.4.R.html
@@ -33,7 +33,7 @@
         <p>Продавец закупил партию ручек и продал их. При этом некоторые покупатели купили одну ручку за 13 рублей, а некоторые купили 3 ручки за 43 рублей. Оказалось, что с каждой покупки продавец получал одинаковую прибыль. <br><br>Найдите цену, по которой продавец закупил ручки.</p>
     </div>
     <form action="" method="get">
-        <input id="answer" placeholder="Ваш ответ"  type="answer"><br><br>
+        <input id="answer" placeholder="Ваш ответ"  type="answer" autocomplete="off"><br><br>
         <input id="button"  type="button" value="Ответить">
     </form>        
     </div>
