--- a/3.2.R.html
+++ b/3.2.R.html
@@ -33,7 +33,7 @@
             <p>Вдоль скоростной автострады расположены мини-кафе «Вёсочка», «Чугунка», «Колорадо», «Стрекоза», «Очаг». Расстояние между «Вёсочкой» и «Чугункой» равно 120 км, расстояние между кафе «Колорадо» и «Очаг» равно 250 км. А расстояние между «Вёсочкой» и «Колорадо» равно расстоянию между «Чугункой» и «Стрекоза».<br><br>Чему равно расстояние между кафе «Стрекоза» и «Очаг»?</p>
     </div>
     <form action="" method="get">
-        <input id="answer" placeholder="Ваш ответ"  type="answer"><br><br>
+        <input id="answer" placeholder="Ваш ответ"  type="answer" autocomplete="off"><br><br>
         <input id="button"  type="button" value="Ответить">
     </form>        
     </div>
