--- a/3.4.R.html
+++ b/3.4.R.html
@@ -41,7 +41,7 @@
             <p>Федя и Аня играют в такую игру. У каждого из них в кармане имеется набор из 20 фишек, на каждой из которых записано некоторое число. На Фединых фишках записаны по 4 раза числа 1, 5, 6, 7 и 9, а на Аниных – 2, 3, 4, 8 и 10. Ход в этой игре заключается в следующем. Федя и Аня одновременно извлекают наудачу по одной фишке из кармана и сравнивают записанные на них числа. Тот из них, у которого число больше, вычитает из него меньшее число, результат записывает на свою фишку вместо написанного на ней числа и кладёт эту фишку обратно в карман. Фишка с меньшим числом при этом выбрасывается. Если на обеих фишках одинаковые числа, то обе фишки выбрасываются. Вслед за этим делается новый ход и т.д. Побеждает тот, у соперника которого не останется фишек.<br><br> Вычислите общую сумму чисел на фишках, оставшихся у победителя.</p>
     </div>
     <form action="" method="get">
-        <input id="answer" placeholder="Ваш ответ"  type="answer"><br><br>
+        <input id="answer" placeholder="Ваш ответ"  type="answer" autocomplete="off"><br><br>
         <input id="button"  type="button" value="Ответить">
     </form>        
     </div>
