--- a/3.5.G.html
+++ b/3.5.G.html
@@ -49,7 +49,7 @@
     
     </div>
     <form >
-        <input id="answer" placeholder="Ваш ответ"  type="answer"><br><br>
+        <input id="answer" placeholder="Ваш ответ"  type="answer" м><br><br>
         <input id="button"  type="button" value="Ответить">
     </form>        
     </div>
