--- a/3.5.R.html
+++ b/3.5.R.html
@@ -32,7 +32,7 @@
             <img src="img/task1.png" width="160" height="160">
     </div>
     <form action="" method="get">
-        <input id="answer" placeholder="Ваш ответ"  type="answer"><br><br>
+        <input id="answer" placeholder="Ваш ответ"  type="answer" autocomplete="off"><br><br>
         <input id="button"  type="button" value="Ответить">
     </form>        
     </div>
