--- a/4.1.R.html
+++ b/4.1.R.html
@@ -39,7 +39,7 @@
             <p>Однажды Федя на одном весёлом празднике решил поучаствовать в интересном конкурсе – метании дротиков в воздушные шарики, в котором следующее правило: за каждое точное попадание в шарик человек получает 2 дополнительных дротика, а за каждый промах у него забирают 1 оплаченный или заработанный им дротик. Решив испытать себя в этой игре, Федя на все свои деньги купил дротики.<br><br>Сколько раз Федя точно попал в шарики, если в конце метания выяснилось, что купил он столько же дротиков, сколько раз он точно попал, а кинуть ему удалось 26 раз?</p>
     </div>
     <form action="" method="get">
-        <input id="answer" placeholder="Ваш ответ"  type="answer"><br><br>
+        <input id="answer" placeholder="Ваш ответ"  type="answer" autocomplete="off"><br><br>
         <input id="button"  type="button" value="Ответить">
     </form>        
     </div>
