--- a/4.4.R.html
+++ b/4.4.R.html
@@ -31,7 +31,7 @@
             <p>В мультике «38 попугаев» попугай ввёл единицу измерения длины «в попугаях». Точно так же можно измерять «в слонёнках» и «в мартышках».Так вот, длина удава «в попугаях» составила 32, а его же длина «в слонёнках» - всего 2.<br><br>Чему равна длина удава «в мартышках», если известно, что длина слонёнка «в мартышках» равна длине мартышки «в попугаях»?</p>
     </div>
     <form action="" method="get">
-        <input id="answer" placeholder="Ваш ответ"  type="answer"><br><br>
+        <input id="answer" placeholder="Ваш ответ"  type="answer" autocomplete="off"><br><br>
         <input id="button"  type="button" value="Ответить">
     </form>        
     </div>
