--- a/4.5.R.html
+++ b/4.5.R.html
@@ -31,7 +31,7 @@
             <p>В некоторой деревне каждый из деревенских жителей либо всегда лжёт, либо всегда говорит правду. Двое из трёх деревенских жителей К, Л и Д высказали следующие утверждения. <br>А : «Деревенский житель Л – лжец». <br>Б : «Ровно один из деревенских жителей К и Д – лжец».<br><br>Кем является деревенский житель Д?<br>В ответ запиши Л, если житель Д всегда лжет, или П, если он всегда говорит правду.</p>
     </div>
     <form action="" method="get">
-        <input id="answer" placeholder="Ваш ответ"  type="answer"><br><br>
+        <input id="answer" placeholder="Ваш ответ"  type="answer" autocomplete="off"><br><br>
         <input id="button"  type="button" value="Ответить">
     </form>        
     </div>
