--- a/1.4.R.html
+++ b/1.4.R.html
@@ -33,7 +33,7 @@
             <p>Часы Васи отстают на 5 минут, но он считает, что часы спешат на 10 минуты. Часы Пети спешат на 2 минуты, однако он думает, что они отстают на 8 минут. Друзья договорились, что встретиться в 6 часов вечера. <br><br>Кто из мальчиков придёт позже и на сколько минут?<br><br>Ответ запишите в следующей форме: A17.<br>Где А-первая буква имени опоздавшего мальчик, 17 - время в минутах, на сколько опоздал мальчик.</p>
     </div>
     <form action="" method="get">
-        <input id="answer" placeholder="Ваш ответ"  type="answer"><br><br>
+        <input id="answer" placeholder="Ваш ответ"  type="answer" autocomplete="off"><br><br>
         <input id="button"  type="button" value="Ответить">
     </form>        
     </div>
