--- a/1.5.R.html
+++ b/1.5.R.html
@@ -33,7 +33,7 @@
             <p>Кассир продал все билеты в первый ряд кинотеатра, причем по ошибке на одно из мест было продано два билета. Сумма номеров мест на всех этих билетах равна 857.<br><br>На какое место продано два билета?<br>(Номера мест – натуральные числа)</p>
     </div>
     <form action="" method="get">
-        <input id="answer" placeholder="Ваш ответ"  type="answer"><br><br>
+        <input id="answer" placeholder="Ваш ответ"  type="answer" autocomplete="off"><br><br>
         <input id="button"  type="button" value="Ответить">
     </form>        
     </div>
