--- a/2.1.R.html
+++ b/2.1.R.html
@@ -33,7 +33,7 @@
             <p>У Миши и Саши к предстоящему празднику имелось по одинаковой прямоугольной открытке. Каждый из мальчиков разрезал свою открытку на два прямоугольника равной площади и один из них выбросил, а один оставил себе. Оказалось, что периметр Мишиного прямоугольника равен 18 см, а Сашиного – 27 см. <br><br>	Найдите периметр и стороны прямоугольной открытки.<br>В ответ запишите сумму полученых значений.</p>
     </div>
     <form action="" method="get">
-        <input id="answer" placeholder="Ваш ответ"  type="answer"><br><br>
+        <input id="answer" placeholder="Ваш ответ"  type="answer" autocomplete="off"><br><br>
         <input id="button"  type="button" value="Ответить">
     </form>        
     </div>
