--- a/2.2.R.html
+++ b/2.2.R.html
@@ -31,7 +31,7 @@
             (Скорости автомашин постоянны)</p>
     </div>
     <form action="" method="get">
-        <input id="answer" placeholder="Ваш ответ"  type="answer"><br><br>
+        <input id="answer" placeholder="Ваш ответ"  type="answer" autocomplete="off"><br><br>
         <input id="button"  type="button" value="Ответить">
     </form>        
     </div>
