--- a/2.4.G.html
+++ b/2.4.G.html
@@ -46,7 +46,7 @@
     
     </div>
     <form >
-        <input id="answer" placeholder="Ваш ответ"  type="answer"><br><br>
+        <input id="answer" placeholder="Ваш ответ"  type="answer" autocomplete="off"><br><br>
         <input id="button"  type="button" value="Ответить">
     </form>        
     </div>
