--- a/2.5.R.html
+++ b/2.5.R.html
@@ -31,7 +31,7 @@
             <img src="img/task.png" align="center">
     </div>
     <form action="" method="get">
-        <input id="answer" placeholder="Ваш ответ"  type="answer"><br><br>
+        <input id="answer" placeholder="Ваш ответ"  type="answer" autocomplete="off"><br><br>
         <input id="button"  type="button" value="Ответить">
     </form>        
     </div>
