--- a/3.3.R.html
+++ b/3.3.R.html
@@ -33,7 +33,7 @@
             <p>Из журнала Катя случайно вырвала часть листов, состоящую из подряд идущих листов. Оказалось, что номера первой и последней его страниц – трёхзначные числа, в записи каждого из которых участвуют только цифры 1, 2, 5.<br><br>Сколько страниц содержит вырванный кусок?</p>
     </div>
     <form action="" method="get">
-        <input id="answer" placeholder="Ваш ответ"  type="answer"><br><br>
+        <input id="answer" placeholder="Ваш ответ"  type="answer" autocomplete="off"><br><br>
         <input id="button"  type="button" value="Ответить">
     </form>        
     </div>
