--- a/4.3.R.html
+++ b/4.3.R.html
@@ -31,7 +31,7 @@
             <p>Коля, Ира, Аня и Федя – друзья. Однажды они решили померяться своим ростом. Для этого они выстроились в один ряд в порядке убывания их роста (среди них нет имеющих одинаковый рост). Затем Федя и Коля поменялись местами, Ира и Аня также поменялись местами. Оказалось, что теперь друзья стоят в порядке возрастания их роста.<br><br>Кто самый высокий из друзей? В ответ запиши его имя.</p>
     </div>
     <form action="" method="get">
-        <input id="answer" placeholder="Ваш ответ"  type="answer"><br><br>
+        <input id="answer" placeholder="Ваш ответ"  type="answer" autocomplete="off"><br><br>
         <input id="button"  type="button" value="Ответить">
     </form>        
     </div>
