--- a/3.1.P.html
+++ b/3.1.P.html
@@ -39,7 +39,7 @@
     <a id="help" href="#" onclick="Swal.fire({
       allowOutsideClick:false,
       text:'Определи, чему кратно общее число пассажиров (всё исходя из данных в условии) и найди его.',
-      confirmButtonColor: '#00ff00',
+      confirmButtonColor: '#800080',
 })">Подсказка</a>
     
     </div>
