--- a/3.2.P.html
+++ b/3.2.P.html
@@ -39,7 +39,7 @@
     <a id="help" href="#" onclick="Swal.fire({
       allowOutsideClick:false,
       text:'Изобрази схему расположения всех мини-кафе, обозначая их начальными буквами их названий.',
-      confirmButtonColor: '#00ff00',
+      confirmButtonColor: '#800080',
 })">Подсказка</a>
     
     </div>
