--- a/3.3.P.html
+++ b/3.3.P.html
@@ -39,7 +39,7 @@
     <a id="help" href="#" onclick="Swal.fire({
       allowOutsideClick:false,
       text:'Какая бы часть ни была вырвана, его первая страница имеет нечётный номер, а последняя – чётный. Составь всевозможные трёхзначные числа, каждое из которых содержит только цифры 1, 2 и 5.',
-      confirmButtonColor: '#00ff00',
+      confirmButtonColor: '#800080',
 })">Подсказка</a>
     
     </div>
