--- a/4.2.P.html
+++ b/4.2.P.html
@@ -40,7 +40,7 @@
       allowOutsideClick:false,
       text:'Посчитай, сколько % составляет 21 конфета, взятая Мишей. С помощью пропорции определи, сколько конфет взял Миша. Это количество взятых Мишей конфет и те 15, которые взял Олег, составляли 75% конфет, оставшихся после того, как угостилась Вика. Посчитай, сколько конфет осталось после Вики, сколько из них взял себе Олег. Количество конфет, оставшихся после Вики, плюс ещё 12 взятых ей конфет составляют 80% от первоначального количества конфет. Посчитай, сколько конфет было изначально до делёжки.',
       width:'60%',
-      confirmButtonColor: '#00ff00',
+      confirmButtonColor: '#800080',
 })">Подсказка</a>
     
     </div>
