--- a/4.3.P.html
+++ b/4.3.P.html
@@ -39,7 +39,7 @@
     <a id="help" href="#" onclick="Swal.fire({
       allowOutsideClick:false,
       text:'Если бы при обмене местами самый высокий из них поменялся с каким-нибудь другом среднего роста, то в получившемся ряду он стоял бы не с краю, т.е. в этом ряду ребята стояли бы не по росту, что противоречит условию. Определи, какими парами могли располагаться ребята.',
-      confirmButtonColor: '#00ff00',
+      confirmButtonColor: '#800080',
 })">Подсказка</a>
     
     </div>
