--- a/4.4.P.html
+++ b/4.4.P.html
@@ -39,7 +39,7 @@
     <a id="help" href="#" onclick="Swal.fire({
       allowOutsideClick:false,
       text:'Пусть в слонёнке – x мартышек, но в каждой «мартышке» – x попугаев, поэтому длина слонёнка «в попугаях» = x*x.',
-      confirmButtonColor: '#00ff00',
+      confirmButtonColor: '#800080',
 })">Подсказка</a>
     
     </div>
